--- a/addons/hr_expense/report/hr_expense_report.xml
+++ b/addons/hr_expense/report/hr_expense_report.xml
@@ -4,101 +4,102 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
-                    <div class="page">
+                    <div class="page o_content_pdf">
                         <h2>Expenses Report</h2>
-
-                        <div class="row mt32 mb32">
-                            <div class="col-2">
-                                <strong>Employee:</strong>
-                                <p t-field="o.employee_id.name"/>
+                        <h3><t t-out="o.name"/></h3>
+                        <div class="row o_header">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-3 fw-bold"><span>Employee:</span> </div>
+                                    <div class="col-9 text-muted"><span t-field="o.employee_id.name"/></div>
+                                </div>
+                                <div class="row" t-if="o.accounting_date">
+                                    <div class="col-3 fw-bold"><span>Date:</span></div>
+                                    <div class="col-9 text-muted"><span t-field="o.accounting_date"/></div>
+                                </div>
                             </div>
-                            <div class="col-2">
-                                <strong>Date:</strong>
-                                <p t-field="o.accounting_date"/>
-                            </div>
-                            <div class="col-3">
-                                <strong>Description:</strong>
-                                <p t-field="o.name"/>
-                            </div>
-                            <div class="col-2">
-                                <strong>Validated By:</strong>
-                                <p t-field="o.user_id"/>
-                            </div>
-                            <div class="col-3">
-                                <strong>Payment By:</strong>
-                                <p t-field="o.payment_mode"/>
+                            <div class="col-6">
+                                <div class="row" t-if="o.user_id.name">
+                                    <div class="col-3 fw-bold"><span>Manager:</span></div>
+                                    <div class="col-9 text-muted"><span t-field="o.user_id"/></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-3 fw-bold"><span>Paid by:</span></div>
+                                    <div class="col-9 text-muted"><span t-field="o.payment_mode"/></div>
+                                </div>
                             </div>
                         </div>
 
-                        <table class="table table-sm">
+                        <table class="o_table">
                             <thead>
                                 <tr>
-                                    <th>Date</th>
-                                    <th>Name</th>
-                                    <th class="text-center">Ref.</th>
-                                    <th>Unit Price</th>
-                                    <th>Taxes</th>
-                                    <th class="text-center">Qty</th>
-                                    <th class="text-end">Price</th>
-                                    <th t-if="o.is_multiple_currency" class="text-end">Price in Company Currency</th>
+                                    <th class="text-start">Date</th>
+                                    <th class="text-start">Name</th>
+                                    <th class="text-end">Unit Price</th>
+                                    <th class="text-end">Quantity</th>
+                                    <th class="text-end">Taxes</th>
+                                    <t t-set="foreign_currencies" t-value="o.expense_line_ids.currency_id - o.company_currency_id"/>
+                                    <th t-if="foreign_currencies" class="text-end">Subtotal in currency</th>
+                                    <th class="text-end">Subtotal</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr t-foreach="o.expense_line_ids" t-as="line">
-                                    <td><span t-field="line.date"/></td>
-                                    <td>
-                                        <span t-field="line.name"/>
-                                        <span t-field="line.description"/><br/>
+                                    <td class="text-start"><span t-field="line.date"/></td>
+                                    <td t-att-class="'text-start' + (' o_overflow' if len(line.name) > 30 else '')">
+                                        <span t-field="line.name"/><br/>
                                         <span>
                                             <div t-foreach="line.analytic_distribution" t-as="distribution">
-                                                <t t-esc="line.env['account.analytic.account'].browse(int(distribution))[0].name"/>: <t t-esc="line.analytic_distribution.get(distribution)"/>
+                                                <t t-out="line.env['account.analytic.account'].browse(int(distribution))[0].name"/>: <t t-out="line.analytic_distribution.get(distribution)"/>
                                             </div>
                                         </span>
                                     </td>
-                                    <td style="text-center">
-                                        <span t-field="line.reference"/>
-                                    </td>
-                                    <td>
-                                        <span t-field="line.unit_amount"/>
-                                    </td>
-                                    <td>
+                                    <td class="text-end"><span t-field="line.unit_amount"/></td>
+                                    <td class="text-end"><span t-field="line.quantity"/></td>
+                                    <td class="text-end">
                                         <t t-foreach="line.tax_ids" t-as="tax">
-                                          <t t-if="tax.description">
-                                            <span t-field="tax.description"/>
-                                          </t>
-                                          <t t-if="not tax.description">
-                                            <span t-field="tax.name"/>
-                                          </t>
+                                            <t t-if="tax.description"><span t-field="tax.description"/></t>
+                                            <t t-if="not tax.description"><span t-field="tax.name"/></t>
                                         </t>
                                     </td>
-                                    <td class="text-center">
-                                        <span t-field="line.quantity"/>
-                                    </td>
-                                    <td class="text-end">
-                                        <span t-field="line.total_amount"
-                                            t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
-                                    </td>
-                                    <td t-if="o.is_multiple_currency" class="text-end">
-                                        <span t-field="line.total_amount_company"/>
-                                    </td>
+                                    <td t-if="foreign_currencies" class="text-end"><span t-field="line.total_amount" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/></td>
+                                    <td class="text-end"><span t-field="line.total_amount_company"  t-options='{"widget": "monetary", "display_currency": o.company_currency_id}'/></td>
                                 </tr>
                             </tbody>
                         </table>
-
-                        <div class="row justify-content-end">
+                        <div class="row justify-content-end o_total">
                             <div class="col-4">
-                                <table class="table table-sm">
-                                    <tr class="border-black">
-                                        <td><strong>Total</strong></td>
-                                        <td class="text-end">
-                                            <span t-field="o.total_amount"
-                                                t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                        </td>
-                                    </tr>
+                                <table class="o_subtable">
+                                    <tbody>
+                                        <tr>
+                                            <td>Untaxed Amount</td>
+                                            <td class="text-end"><span t-field="o.untaxed_amount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Taxes</td>
+                                            <td class="text-end"><span t-field="o.total_amount_taxes" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
+                                        </tr>
+                                        <tr class="fw-bold">
+                                            <td>Total</td>
+                                            <td class="text-end"><span t-field="o.total_amount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
+                                        </tr>
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
-                        <p>Certified honest and conform,<br/>(Date and signature).<br/><br/></p>
+                    </div>
+                </t>
+            </t>
+        </t>
+    </template>
+
+    <template id="report_expense_sheet_img">
+        <t t-call="web.html_container">
+            <t t-foreach="docs" t-as="o">
+                <t t-call="web.basic_layout">
+                    <div t-if="attachment and attachment.mimetype != 'application/pdf'">
+                        <h3> <t t-out="attachment.res_name"/> </h3>
+                        <img t-att-src="attachment.image_src" class="o_attachment_pdf"/>
                     </div>
                 </t>
             </t>
@@ -116,4 +117,11 @@
         <field name="binding_type">report</field>
     </record>
 
+    <record id="action_report_expense_sheet_img" model="ir.actions.report">
+        <field name="name">Expense Report Image</field>
+        <field name="model">hr.expense.sheet</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">hr_expense.report_expense_sheet_img</field>
+        <field name="report_file">hr_expense.report_expense_sheet_img</field>
+    </record>
 </odoo>
