[FIX] point_of_sale: switch product view
After the bootstrap refactoring introduced in this commit cc349515a4923874067705267bbaa383276556e6.
The switch product view wasn't working anymore. This commit reintroduce
the logic behind the switch product view option.

Task-3500621

closes odoo/odoo#135431

Signed-off-by: Joseph Caburnay (jcb) <jcb@odoo.com>

--- a/addons/point_of_sale/static/src/app/screens/product_screen/product_list/product_list.scss
+++ b/addons/point_of_sale/static/src/app/screens/product_screen/product_list/product_list.scss
@@ -3,7 +3,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .product-list {
+    .product-list.grid {
         grid-template-columns: repeat(3, 1fr);
     }
 }
